--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,2 +1,49 @@
-set-option -g default-terminal screen-256color
-set -g terminal-overrides 'xterm:colors=256'
+# vim color-scheme反映用
+set -g default-terminal xterm-256color
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+
+# prefix
+set -g prefix C-a
+# C-bのキーバインド解除
+unbind C-b
+# ウインドウのインデックスを1から
+set -g base-index 1
+# ペインのインデックスを1から
+setw -g pane-base-index 1
+# ステータスバーをトップに配置する
+set-option -g status-position top
+# 設定ファイルをリロードする
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
+# | でペインを縦に分割する
+bind | split-window -h
+# - でペインを横に分割する
+bind - split-window -v
+# キーストロークのディレイを減らす
+set -sg escape-time 1
+# Vimのキーバインドでペインを移動する
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+# Vimのキーバインドでペインをリサイズする
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
+# ステータスバーの色を設定する
+set -g status-fg white
+set -g status-bg black
+# ウィンドウリストの色を設定する
+setw -g window-status-fg green
+setw -g window-status-bg default
+setw -g window-status-attr dim
+# アクティブなウィンドウを目立たせる
+setw -g window-status-current-fg red
+setw -g window-status-current-bg default
+setw -g window-status-current-attr bright
+# ペインボーダーの色を設定する
+set -g pane-border-fg green
+set -g pane-border-bg default
+# アクティブなペインを目立たせる
+set -g pane-active-border-fg red
+set -g pane-active-border-bg default
