--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
 # vim color-scheme反映用
 set -g default-terminal xterm-256color
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+# set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 # prefix
 set -g prefix C-a
@@ -13,10 +13,13 @@ setw -g pane-base-index 1
 # ステータスバーをトップに配置する
 set-option -g status-position top
 # 設定ファイルをリロードする
+unbind r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 # | でペインを縦に分割する
+unbind %
 bind | split-window -h
 # - でペインを横に分割する
+unbind '"'
 bind - split-window -v
 # キーストロークのディレイを減らす
 set -sg escape-time 1
@@ -47,3 +50,5 @@ set -g pane-border-bg default
 # アクティブなペインを目立たせる
 set -g pane-active-border-fg red
 set -g pane-active-border-bg default
+# マウスのスクロールをオンにする
+# set-window-option -g mode-mouse on
