--- a/.tmux.conf
+++ b/.tmux.conf
@@ -52,3 +52,7 @@ set -g pane-active-border-fg red
 set -g pane-active-border-bg default
 # マウスのスクロールをオンにする
 # set-window-option -g mode-mouse on
+# Hyperのアイコン用
+setw -g allow-rename on
+set-option -g set-titles on
+set-option -g set-titles-string "#T #{session_alerts}"
