--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
 # vim color-scheme反映用
-set -g default-terminal xterm-256color
-# set-option -ga terminal-overrides ",xterm-256color:Tc"
+set -g default-terminal screen-256color
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 # prefix
 set -g prefix C-a
